[feat] - Adds dockerfile and fixes routes for more restful handling
